--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
     "dev": "ts-node-dev ./index.ts"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/multer": "^1.4.5",
     "@types/node": "^14.14.37",
     "prettier": "^2.2.1",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "multer": "^1.4.2"
   }
 }
